--- a/services/admin-console/repo/composer.json
+++ b/services/admin-console/repo/composer.json
@@ -9,6 +9,7 @@
         "php": "^8.2",
         "bezhansalleh/filament-shield": "^3.9",
         "filament/filament": "^3.2",
+        "hasnayeen/themes": "^3.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1"
     },
