--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - "8082:80"
     volumes:
       - /srv/web/services/chat-client/www:/usr/share/nginx/html:ro
+      - /srv/web/services/chat-client/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
     networks:
       - web-internal
 
