--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -61,7 +61,6 @@ services:
     container_name: prd-web-aifirst-api-01
     restart: unless-stopped
     user: "${CURRENT_UID}:${CURRENT_GID}"
-    # AGREGAR ESTA LÍNEA:
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload 
     ports:
       - "8084:8000"
@@ -81,6 +80,8 @@ services:
       - "8085:80"
     volumes:
       - /srv/web/services/ai-first/frontend:/usr/share/nginx/html:ro
+      # --- MODIFICACIÓN AQUÍ ---
+      - /srv/web/services/ai-first/frontend/nginx.conf:/etc/nginx/conf.d/default.conf:ro
     networks:
       - web-internal
 
